# fed-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  healthcare.yaml  smartgrid.yaml  traffic.yaml
scripts/: _bootstrap.py  download_healthcare.py  download_smartgrid.py  download_traffic.py  make_partition_figures.py  run_experiment.py
src/fedcity/: __init__.py  config.py  report.py  runner.py
src/fedcity/centralized/: __init__.py  train.py
src/fedcity/datasets/: __init__.py  loaders.py  partition.py  visualize.py
src/fedcity/fl/: __init__.py  client.py  failures.py  flower_app.py  metrics.py  quantize.py  strategies.py
src/fedcity/fl/auction/: __init__.py  agent.py  env.py  selector.py
src/fedcity/models/: __init__.py  _common.py  healthcare.py  smartgrid.py  traffic.py
tests/: test_failures.py  test_fl_smoke.py  test_models.py  test_partition.py  test_quantize.py  test_strategies.py
